# svgtextbox

./: Cargo.toml
src/: checks.rs  enum_matches.rs  errors.rs  fontsizing.rs  input.rs  layout.rs  lib.rs  output.rs  padded_textbox.rs  pango_interactions.rs  pango_wrappers.rs  svgwriter.rs  tests.rs  textbox.rs  textbox.xslt  textbox_input.xslt  utils.rs  xml_fetcher.rs  xml_support.rs
tests/: xml.rs
tests/xml_inputs/: straightforward.xml
