[package]
name = "svgtextbox"
version = "0.1.0"
edition = "2018"
license = "LGPL-3.0-or-later"
description = "Fit text within svg images"

[dependencies]
cairo-rs = {version = "0.7", features = ["svg"]}
pango = "0.7"
pangocairo = "0.8"
glib = "0.8"
glib-sys = "0.9"
pango-sys = "0.9"
base64 = "0.10"
regex = "1.1"
custom_error = "1.6"
minidom = "0.10"
quick-xml = "0.13"

[dev-dependencies]
proptest = "0.9.2"