[package]
name = "svgtextbox2"
version = "0.1.0"
authors = ["Tom McLean <thomasowenmclean@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
cairo-rs = {version = "0.7", features = ["svg"]}
pango = "0.7"
pangocairo = "0.8"
lazy_static = "1.3"
regex = "1.2"
xml-rs = "0.8"
base64 = "0.10"