[package]
name = "svgtextbox"
version = "0.1.0"
authors = ["Tom McLean <thomasowenmclean@gmail.com>"]
edition = "2018"

[dependencies]
cairo-rs = {version = "0.7", features = ["svg"]}
pango = "0.7"
pangocairo = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.2"
lazy_static = "1.3"
base64 = "0.10"
glib = "0.8"
libxml = "0.2"
libxslt = "0.1"
usvg = "0.9.0"